# com3001-fyp

./: CMakeLists.txt  README.md
src/: main.c  platform_defines.h  toggle_defines.h
src/esch256_ref/: api.h  hash.c
src/esch256_simd/: api.h  genkat_hash.c  hash.c
src/esch384-ref/: api.h  hash.c
src/esch384-simd/: api.h  esch_cfg.h  hash.c  sparkle_simd.c  sparkle_simd.h
src/esch384_ref/: api.h  hash.c
src/esch384_simd/: api.h  hash.c
src/pyjamask128_ref/: api.h  encrypt.c  pyjamask.c  pyjamask.h
src/pyjamask128_simd/: api.h  encrypt.c  pyjamask.c  pyjamask.h
src/pyjamask96_ref/: api.h  encrypt.c
src/pyjamask96_simd/: api.h  encrypt.c
src/pyjamask_ref/: pyjamask.c  pyjamask.h
src/pyjamask_simd/: pyjamask.c  pyjamask.h
src/schwaemm128128_ref/: api.h  encrypt.c
src/schwaemm128128_simd/: api.h  encrypt.c
src/schwaemm192192_ref/: api.h  encrypt.c
src/schwaemm192192_simd/: api.h  encrypt.c
src/schwaemm256128_ref/: api.h  encrypt.c
src/schwaemm256128_simd/: api.h  encrypt.c
src/schwaemm256256_ref/: api.h  encrypt.c
src/schwaemm256256_simd/: api.h  encrypt.c
src/schwaemm256_256-ref/: api.h  encrypt.c  schwaemm_cfg.h
src/sparkle-ref/: sparkle_ref.c  sparkle_ref.h
src/sparkle-simd/: sparkle_simd.c  sparkle_simd.h
src/sparkle_ref/: sparkle_ref.c  sparkle_ref.h
src/sparkle_simd/: alzette_avx_impls.h  sparkle_simd.c  sparkle_simd.h
